Archive2/a6/33acacd40df57b/output
main.cpp: In function 'int main()':
main.cpp:23:25: error: 'MyStruct' was not declared in this scope
     std::cout << typeid(MyStruct).name() << "\n";
                         ^
main.cpp:23:25: note: suggested alternative:
main.cpp:9:11: note:   'mine::MyStruct'
         } MyStruct;
           ^
